src/packages/@app/styles/style.scss
/* ... */
@each $border, $value in $sparrow-border-colors {
  .border-#{$border} {
    border-color: $value;
  }
}

@import "bootstrap/scss/maps";
@import "bootstrap/scss/mixins";
@import "bootstrap/scss/root";
@import "bootstrap";

body {
  background-color: var(--background-color) !important;
}

p,
h1,
h2,
h3,
h4,
h5,
h6,
a,
li,
span {
  word-wrap: break-word;
}

.border-error {
  border-color: $sparrow-error;
  border-width: 3px;
}

.border-success {
  border-color: $sparrow-success;
  border-width: 1px;
}

.border-default {
  border-color: $sparrow-default;
  border-width: 1px;
}

.border-color {
  border-color: #313233;
  width: 1px;
}

.ellipsis {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

//
//
// global scroll bar customization
//
//
::-webkit-scrollbar {
  width: 2px;
  height: 2px;
}

::-webkit-scrollbar-thumb {
  background: #888;
  cursor: pointer;
}

.env-highlight {


  &.env-found {
    color: var(--text-primary-400);
    cursor: pointer;
  }

  &.env-found:hover {
    color: var(--primary-btn-color);
    background-color: var(--selected-active-sidebar);
  }

  &.env-not-found {
    color: var(--text-danger-200);
    cursor: pointer;
  }

  &.env-not-found:hover {
    color: var(--dangerColor);
    background-color: var(--bg-danger-1100);
  }

  &.hover-found {
    color: var(--text-primary-200);
  }

  &.hover-not-found {
    color: var(--text-danger-200);
  }

}

textarea {
  resize: none;
}

